<resources>
    <string name="app_name">The Daily Forecast</string>
    <string name="AppName">The Daily Forecast</string>
    <string name="finance_budget"><![CDATA[Finance & Budget]]></string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="the_daily_forecast">The Daily Forecast</string>
    <string name="nav_open">Open Navigation</string>
    <string name="nav_close">Close Navigation</string>
    <string name="sunny_weather">Sunny Weather</string>
    <string name="news_image">News Image</string>
    <string name="app_logo">App Logo</string>
    <string name="select_date">Select date</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_description_optional">Enter description (optional)</string>
    <string name="save">Save</string>
    <string name="total_income_0_00">Total Income: £0.00</string>
    <string name="add_income">Add Income</string>
    <string name="total_expenses_0_00">Total Expenses: £0.00</string>
    <string name="add_expense">Add Expense</string>
    <string name="select_currency">Select Currency</string>
    <string name="fetching_location">Fetching location…</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="wind_km_h">Wind: — km/h</string>
    <string name="dir">Dir: —°</string>
    <string name="date">Date</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="category">Category</string>
    <string name="delete">Delete</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="temp_c">Temp: —°C</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="home">Home</string>
    <string name="finance">Finance</string>
    <string name="settings">Settings</string>
</resources>